--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="styles/portfolio.css">
 </head>
 <body class="open-sans-normal">
-    <header class="header">
+    <header class="header secondary-bg">
         <nav>
             <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
             <ul>
@@ -32,7 +32,35 @@
             <img class="banner-profile-pic" src="myprofile.jpg" alt="">
         </div>
     </header>
-    <main>
+    <main class="main">
+        <section class="about secondary-bg">
+            <h3 class="section-title">About  Me</h3>
+            <p class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, ratione! Laborum, veritatis eligendi asperiores illum aspernatur hic quaerat ab nulla praesentium laudantium incidunt accusantium accusamus voluptates magni natus exercitationem deleniti.
+            </p>
+            <div class="about-items">
+                <!--  .about-item*4>p.item-title+p.item-description-->
+                
+                <div class="about-item">
+                    <p class="item-title">name</p>
+                    <p class="item-description">mary Hardy</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">Email</p>
+                    <p class="item-description">abcd@gmail.com</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">Date of Birth</p>
+                    <p class="item-description">Dec 16, 1971</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">from</p>
+                    <p class="item-description">dhaka bd</p>
+                </div>
+            </div>
+
+
+
+        </section>
     </main>
     <footer>
     </footer>
