--- a/index.html
+++ b/index.html
@@ -61,6 +61,36 @@
 
 
         </section>
+        <!-- what i do section -->
+         <section class="skills">
+            <h3 class="section-title text-center">WHAT I DO</h3>
+            <p class="section-discription text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            </p>
+            <div class="skills-container">
+                <!--.skill*4>img+h4.skill-title+p.skill-description-->
+                <div class="skill">
+                    <img class="imagee" src="images/javaicon.png" alt="">
+                    <h4 class="skill-title">Vanilla Javascript</h4>
+                    <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+                <div class="skill">
+                    <img class="imagee" src="images/reacticon.png" alt="">
+                    <h4 class="skill-title">React</h4>
+                    <p class="skill-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                </div>
+                <div class="skill">
+                    <img class="imagee" src="images/nodejsicon.jpeg" alt="">
+                    <h4 class="skill-title">Nodejs</h4>
+                    <p class="skill-description">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                </div>
+                <div class="skill">
+                    <img class="imagee" src="images/mongobdicon.jpeg" alt="">
+                    <h4 class="skill-title">Mongobd</h4>
+                    <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+            </div>
+
+         </section>
     </main>
     <footer>
     </footer>
